# digital-unconscious

./: .gitignore  LICENSE  README.md  RELEASES.md  autonomous_research_pipeline_v2.docx  pyproject.toml
config/: pipeline.toml
docs/: ARCHITECTURE.md  CLAUDE_CODE_INTEGRATION.md  COMPETITIVE_LANDSCAPE.md  IMPLEMENTATION_STATUS.md  PRD.md
src/du_research/: __init__.py  __main__.py  ai_backend.py  automation.py  circuit_breaker.py  cli.py  config.py  credential_broker.py  dashboard.py  engine.py  launcher.py  maintenance.py  models.py  net.py  observation.py  onboarding.py  pipeline.py  rag.py  service_manager.py  skill_installer.py  storage.py  submission.py  task_queue.py  tray.py  utils.py
src/du_research/agents/: __init__.py  analysis_coder.py  briefing.py  compressor.py  idea_generator.py  judge.py  learning_engine.py  reviewer.py  revision.py  writer.py
src/du_research/integrations/: __init__.py  claude_code.py
src/du_research/stages/: __init__.py  analysis.py  daily_capture.py  data_sources.py  drafting.py  feasibility.py  learning.py  literature.py  review.py
tests/: test_engine.py  test_learning.py  test_pipeline.py
tests/fixtures/: daily_log.txt  sample_data.csv
